--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
+    "module":"nodeNext",
     "moduleResolution": "nodenext",
     "target": "ES2021",
     "checkJs": true,
     "allowJs": true
   }
-}
+} 
