--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "strapi": "strapi",
     "deploy": "strapi deploy"
   },
+  "heroku": {
+    "buildpacks": ["heroku/nodejs"]
+  },
   "dependencies": {
     "@strapi/plugin-cloud": "4.25.3",
-    "@strapi/plugin-i18n": "^4.16.2",
-    "@strapi/plugin-users-permissions": "^4.8.1",
-    "@strapi/strapi": "^4.15.5",
+    "@strapi/plugin-i18n": "4.25.3",
+    "@strapi/plugin-users-permissions": "4.25.3",
+    "@strapi/strapi": "4.25.3",
     "better-sqlite3": "8.6.0",
+    "ejs": "^3.1.10",
+    "express": "^4.19.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
